--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,7 @@
 .navbar{
-  position: relative;
-  margin: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
   box-sizing: border-box;
