Circle blocks + added SVG direction

--- a/src/components/MenuSlot/MenuSlot.module.scss
+++ b/src/components/MenuSlot/MenuSlot.module.scss
@@ -5,7 +5,7 @@
   border: #000510 3px solid;
   cursor: pointer;
   position: relative;
-  border-radius: 20%;
+  border-radius: 70px;
 }
 
 .container:hover{
