--- a/src/components/BlurredTextBlock/BluredTextBlock.module.scss
+++ b/src/components/BlurredTextBlock/BluredTextBlock.module.scss
@@ -1,10 +1,11 @@
 .title {
-  font-size: 40px;
+  font-size: 35pt;
   font-weight: 600;
 }
 
 .titleBlock {
-  top: 75%;
+  top: 8%;
+  color: white;
   height: 13vh;
   position: relative;
   width: 80%;
