--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -19,7 +19,7 @@
 
 .form {
   width: 16vw;
-  margin: 20vh 2vw;
+  margin: 7vh 2vw;
   z-index: 10;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -29,7 +29,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 4vh;
-  font-size: 20px;
+  font-size: 20pt;
   font-weight: 600;
   border-radius: 70px;
   padding: 3vh;
@@ -47,7 +47,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1vh;
-  font-size: 35px;
+  font-size: 35pt;
+  color: white;
 }
 
 .radio {
