--- a/src/components/BlurredTextBlock/BluredTextBlock.module.scss
+++ b/src/components/BlurredTextBlock/BluredTextBlock.module.scss
@@ -1,6 +1,8 @@
 .title {
-  font-size: 35pt;
+  font-size: 28pt;
   font-weight: 600;
+  margin: 0;
+  color: #eeb082;
 }
 
 .titleBlock {
@@ -13,7 +15,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 40px rgba(255, 255, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(8px);
-  border-radius: 70px;
+  border-radius: 20px 120px;
+}
+
+.innerBlock {
+  width: 100%;
+  height: 50%;
+  margin: auto;
+  background: rgb(255,255,255,1);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
