--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -1,9 +1,4 @@
 .container {
-  top: 9.1vh;
-  right: 1vw;
-  height: 89.7vh;
-  width: 23vw;
-  position: fixed;
   background-size: cover;
   background-position-x: center;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
@@ -18,8 +13,7 @@
 }
 
 .form {
-  width: 13vw;
-  margin: 5.5vh auto;
+  margin: auto;
   z-index: 10;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -95,5 +89,21 @@
 @keyframes minimizeForm {
   to {
     margin:0;
+  }
+}
+
+@media (max-width: 1200px) {
+  .form {
+    height: 100%;
+    padding: 0;
+    border-radius: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .form {
+    height: 100%;
+    padding: 0;
+    border-radius: 0;
   }
 }
