--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -4,6 +4,13 @@
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
 }
 
+.container:hover {
+  box-shadow: 0 0 120px rgba(255, 255, 255, 1);
+  transition: 0.4s;
+  z-index: 2;
+  opacity: 1;
+}
+
 .minimizeContainer {
   animation: minimizeContainer 1s forwards;
 }
@@ -18,7 +25,6 @@
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(8px);
-  gap: 4vh;
   font-size: 20pt;
   font-weight: 600;
   border-radius: 35px;
@@ -34,7 +40,7 @@
 }
 
 .radioGroup {
-  margin-top: 8vh;
+
 }
 
 .innerBlock {
@@ -77,6 +83,10 @@
   background: linear-gradient(150deg, rgb(255, 255, 255), rgb(242, 211, 165));
 }
 
+.darkBackground {
+  opacity: 0.5;
+}
+
 @keyframes minimizeContainer {
   to {
     top: 52vh;
@@ -94,7 +104,6 @@
 
 @media (max-width: 1200px) {
   .form {
-    height: 100%;
     padding: 0;
     border-radius: 0;
   }
@@ -102,7 +111,6 @@
 
 @media (max-width: 768px) {
   .form {
-    height: 100%;
     padding: 0;
     border-radius: 0;
   }
