Chatform hover + chat form on pages

--- a/src/pages/MyWay/MyWay.module.scss
+++ b/src/pages/MyWay/MyWay.module.scss
@@ -10,3 +10,11 @@
   background-size: cover;
   background-position-x: 40%;
 }
+
+.chatForm {
+  position: fixed;
+  right: 0;
+  top: 50px;
+  width: 22vw;
+  height: 90vh;
+}
