--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -1,4 +1,5 @@
 .container {
+  height: 100%;
   background-size: cover;
   background-position-x: center;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
@@ -20,7 +21,7 @@
 }
 
 .form {
-  margin: auto;
+  margin: 4.7vh 2vw;
   z-index: 10;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -28,7 +29,10 @@
   font-size: 20pt;
   font-weight: 600;
   border-radius: 35px;
-  padding: 3vh;
+  padding: 2.5vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
 }
 
 .minimizeForm {
@@ -40,7 +44,7 @@
 }
 
 .radioGroup {
-
+  font-size: 12pt;
 }
 
 .innerBlock {
@@ -66,7 +70,7 @@
 }
 
 .radio {
-  font-size: 15pt;
+
 }
 
 .input {
@@ -78,7 +82,7 @@
 }
 
 .submitButton {
-  margin: auto;
+  align-self: center;
   color: black;
   background: linear-gradient(150deg, rgb(255, 255, 255), rgb(242, 211, 165));
 }
@@ -104,8 +108,11 @@
 
 @media (max-width: 1200px) {
   .form {
-    padding: 0;
-    border-radius: 0;
+    margin: 1vh;
+  }
+
+  .input {
+    height: 25px;
   }
 }
 
@@ -113,5 +120,7 @@
   .form {
     padding: 0;
     border-radius: 0;
+    margin: 0;
+    gap: 0;
   }
 }
