--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -21,7 +21,7 @@
 }
 
 .form {
-  margin: 4.7vh 2vw;
+  margin: 7vh 2vw;
   z-index: 10;
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -29,7 +29,7 @@
   font-size: 20pt;
   font-weight: 600;
   border-radius: 35px;
-  padding: 2.5vh;
+  padding: 0 2.5vh 2.5vh 2.5vh;
   display: flex;
   flex-direction: column;
   gap: 2vh;
