--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -32,7 +32,7 @@
   padding: 0 2.5vh 2.5vh 2.5vh;
   display: flex;
   flex-direction: column;
-  gap: 2vh;
+  gap: 3vh;
 }
 
 .minimizeForm {
@@ -82,9 +82,15 @@
 }
 
 .submitButton {
+  font-size: 14pt;
+  font-weight: 600;
+  width: 60%;
+  height: 40px;
   align-self: center;
-  color: black;
-  background: linear-gradient(150deg, rgb(255, 255, 255), rgb(242, 211, 165));
+  color: white;
+  background-image: url("../../assets/jpg/test1.jpg");
+  background-size: cover;
+  box-shadow: rgba(0, 0, 0, 0.5) 3px 5px 11px;
 }
 
 .darkBackground {
