navbar changed to sticky, also dvh added instead of vh

--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -1,9 +1,9 @@
 .mainContainer {
-  min-height: 90vh;
+  min-height: 90dvh;
 }
 
 .menuContainer {
-  height: 89vh;
+  height: 89dvh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
