--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,9 +1,8 @@
 .App {
     background: fixed;
     background: linear-gradient(150deg, rgb(255, 255, 255), rgb(242, 211, 165));
-}
-
-.margin {
-    width: 100%;
-    height: 92px;
+    height: 100dvh;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
 }
