--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,16 +1,13 @@
 .navbar{
-  position: fixed;
-  top: 0;
+  position: sticky;
   width: 100%;
-  box-sizing: border-box;
-  list-style-type: none;
   display: flex;
   font-size: 14pt;
   background-color: white;
   justify-content: flex-start;
-  gap: 10%;
   align-items: center;
-  z-index: 10;
+  z-index: 100;
+  height: auto;
 }
 
 ul {
@@ -34,7 +31,7 @@ ul li{
 }
 
 .navbar-menu-item {
-  margin-right: 40vw;
+  
 }
 
 ul li .navbar-icon{
