fix dvh on navbar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
   justify-content: flex-start;
   align-items: center;
   z-index: 100;
-  height: auto;
+  height: 10dvh;
 }
 
 ul {
@@ -31,7 +31,7 @@ ul li{
 }
 
 .navbar-menu-item {
-  
+
 }
 
 ul li .navbar-icon{
