fix adaptive mobile look

--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -7,7 +7,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-content: center;
-  gap: 1%;
+  gap: 1dvh;
   padding: 0 1vw;
 }
 
