--- a/src/components/BlurredTextBlock/BluredTextBlock.module.scss
+++ b/src/components/BlurredTextBlock/BluredTextBlock.module.scss
@@ -14,7 +14,7 @@
   height: 11vh;
   position: relative;
   width: 13vw;
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
