--- a/src/components/ChatForm/ChatForm.module.scss
+++ b/src/components/ChatForm/ChatForm.module.scss
@@ -43,10 +43,6 @@
   animation: minimizeForm 0.65s forwards reverse;
 }
 
-.radioGroup {
-  font-size: 12pt;
-}
-
 .innerBlock {
   position: absolute;
   top: 25px;
@@ -69,8 +65,8 @@
   color: #eeb082;
 }
 
-.radio {
-
+.select {
+  margin-top: 2vh;
 }
 
 .input {
@@ -84,7 +80,7 @@
 .submitButton {
   font-size: 14pt;
   font-weight: 600;
-  width: 60%;
+  min-width: 60%;
   height: 40px;
   align-self: center;
   color: white;
@@ -124,9 +120,10 @@
 
 @media (max-width: 768px) {
   .form {
-    height: 80%;
+    height: 32.4dvh;
     border-radius: 0;
     margin: 0;
-    gap: 0;
+    gap: 1vh;
+    padding: 1vh 20vw;
   }
 }
