--- a/src/components/ReviewSlider/ReviewSlider.module.scss
+++ b/src/components/ReviewSlider/ReviewSlider.module.scss
@@ -1,7 +1,7 @@
 .container{
   width: 50vw;
   background-color: #ffffff;
-  margin: 10vh auto auto;
+  margin: 5vh auto;
   box-shadow: 0 10px 25px rgba(0,0,0,0.8);
 }
 
