--- a/src/components/MenuSlot/MenuSlot.module.scss
+++ b/src/components/MenuSlot/MenuSlot.module.scss
@@ -26,6 +26,8 @@
 
 @media (max-width: 768px) {
   .container {
-    background-position-y: 30%;
+    background-position-y: 10%;
+    padding-left: 30vw;
+    background-position-x: 0;
   }
 }
