--- a/src/components/BlurredTextBlock/BluredTextBlock.module.scss
+++ b/src/components/BlurredTextBlock/BluredTextBlock.module.scss
@@ -3,7 +3,7 @@
   font-weight: 600;
   margin: 0;
   color: transparent;
-  background-image: url("../../assets/jpg/test4.jpg");
+  background-image: url("../../assets/jpg/goldenFont.jpg");
   background-clip: text;
   background-size: cover;
 }
@@ -30,6 +30,7 @@
   background-image: url("../../assets/jpg/whiteBrush.png");
   background-size: cover;
   background-position-y: 50%;
+  background-position-x: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,7 +49,7 @@
 
 @media (max-width: 768px) {
   .innerBlock {
-    width: max(75vw, 340px);
+    width: max(55vw, 270px);
   }
 
   .titleBlock {
