antd carousel is finally fixed! favicon try to fix

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,3 +6,21 @@
     flex-direction: column;
     overflow: hidden;
 }
+
+.slick-list {
+    height: 100% !important;
+    object-fit: contain;
+}
+
+.slick-track {
+    height: 100% !important;
+}
+
+.slick-slide {
+    object-fit: contain;
+}
+
+.slick-slide div {
+    height: 100% !important;
+    object-fit: contain;
+}
