--- a/src/App/App.css
+++ b/src/App/App.css
@@ -24,3 +24,7 @@
     height: 100% !important;
     object-fit: contain;
 }
+
+.ant-collapse-content {
+    background-color: transparent !important;
+}
